[workspace]
members = [
    "examples",
    "rustls-mbedcrypto-provider",
    "rustls-mbedpki-provider",
    "rustls-mbedtls-provider-utils",
]
default-members = [
    "rustls-mbedcrypto-provider",
    "rustls-mbedpki-provider",
    "rustls-mbedtls-provider-utils",
]
resolver = "2"

[patch.crates-io]
mbedtls = { git = "https://github.com/fortanix/rust-mbedtls", branch = "yx/add-hkdf" }
