[package]
name = "rustls-mbedtls-provider-examples"
description = "rustls-mbedtls-provider example code."
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[dependencies]
env_logger = "0.10"
rustls = { version = "0.23" }
rustls-mbedcrypto-provider = { path = "../rustls-mbedcrypto-provider", features = [
  "tls12",
] }
rustls-mbedpki-provider = { path = "../rustls-mbedpki-provider" }
rustls-native-certs = "0.7.0"
rustls-pemfile = "2"
rustls-pki-types = "1"
