[package]
name = "rustls-mbedtls-provider-examples"
description = "rustls-mbedtls-provider example code."
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[dependencies]
env_logger = "0.11"
rustls = { version = "0.23.15", default-features = false, features = [
  "logging",
  "std",
  "tls12",
] }
rustls-mbedcrypto-provider = { path = "../rustls-mbedcrypto-provider", features = [
  "logging",
  "tls12",
] }
rustls-mbedpki-provider = { path = "../rustls-mbedpki-provider" }
rustls-native-certs = "0.8.0"
rustls-pemfile = "2"
rustls-pki-types = "1"
