[package]
name = "rustls-mbedtls-provider-examples"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "rustls-mbedtls-provider example code."
publish = false

[dependencies]
rustls-mbedcrypto-provider = { path = "../rustls-mbedcrypto-provider", features = ["tls12"] }
rustls-mbedpki-provider = { path = "../rustls-mbedpki-provider" }
env_logger = "0.10"
rustls = { git = "https://github.com/fortanix/rustls", tag = "ffdhe-r4_fix-ecpoint-ext", default-features = false }
rustls-native-certs = "0.7.0"
rustls-pki-types = "1"
rustls-pemfile = "2"
