[package]
name = "rustls-mbedcrypto-provider"
version = "0.1.0"
authors = ["Fortanix Inc."]
categories = ["cryptography", "network-programming"]
description = "Mbedtls based crypto provider for rustls."
edition = "2021"
homepage = "https://github.com/fortanix/rustls-mbedtls-provider"
license = "MPL-2.0"
readme = "../README.md"
repository = "https://github.com/fortanix/rustls-mbedtls-provider"
resolver = "2"

[dependencies]
bit-vec = "0.6.3"
log = { version = "0.4", optional = true }
mbedtls = { version = "0.12.3", default-features = false, features = ["std"] }
rustls = { version = "0.23.14", default-features = false, features = ["std"] }
utils = { package = "rustls-mbedtls-provider-utils", path = "../rustls-mbedtls-provider-utils", version = "0.2.0" }
webpki = { package = "rustls-webpki", version = "0.102.0", default-features = false, features = [
  "alloc",
  "std",
] }
yasna = { version = "0.3", default-features = false, features = ["bit-vec"] }

[dev-dependencies]
bencher = "0.1.5"
env_logger = "0.10"
log = { version = "0.4" }
rustls = { version = "0.23.14", default-features = false, features = [
  "ring",
  "std",
] }
rustls-pemfile = "2"
webpki-roots = "0.26.1"

[features]
default = ["logging", "tls12"]
fips = ["self_tests"]               # enable FIPS checks
logging = ["log", "rustls/logging"]
rdrand = ["mbedtls/rdrand"]
self_tests = []                     # enables `self_tests` module
tls12 = ["rustls/tls12"]

[[example]]
name = "client"
path = "examples/client.rs"

[[example]]
name = "bench"
path = "examples/internal/bench.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(bench)'] }
