[package]
authors = ["Fortanix Inc."]
categories = ["network-programming", "cryptography"]
description = "Implements rustls PKI traits using mbedtls"
edition = "2021"
license = "MPL-2.0"
name = "rustls-mbedpki-provider"
readme = "../README.md"
repository = "https://github.com/fortanix/rustls-mbedtls-provider"
resolver = "2"
version = "0.0.2"

[dependencies]
chrono = "0.4"
mbedtls = { version = "0.12.2", default_features = false, features = [
    "x509",
    "chrono",
    "std",
] }
rustls = { version = "0.22.2", default_features = false }
utils = { package = "rustls-mbedtls-provider-utils", path = "../rustls-mbedtls-provider-utils", version = "0.1.0" }
x509-parser = "0.15"

[dev-dependencies]
mbedtls = { version = "0.12.2", default_features = false, features = [
    "time",
] } # We enable the time feature for tests to make sure it does not mess up cert expiration checking
rustls = { version = "0.22.2" }
rustls-pemfile = "2"
