[package]
name = "rustls-mbedpki-provider"
version = "0.2.0"
authors = ["Fortanix Inc."]
categories = ["cryptography", "network-programming"]
description = "Implements rustls PKI traits using mbedtls"
edition = "2021"
license = "MPL-2.0"
readme = "../README.md"
repository = "https://github.com/fortanix/rustls-mbedtls-provider"
resolver = "2"

[dependencies]
chrono = "0.4"
mbedtls = { version = "0.13.0", default-features = false, features = [
  "chrono",
  "std",
  "x509",
] }
rustls = { version = "0.23.5", default-features = false }
utils = { package = "rustls-mbedtls-provider-utils", path = "../rustls-mbedtls-provider-utils", version = "0.2.0" }
x509-parser = "0.17"

[dev-dependencies]
mbedtls = { version = "0.13.0", default-features = false, features = [
  "time",
] } # We enable the time feature for tests to make sure it does not mess up cert expiration checking
rustls = { version = "0.23.5", default-features = false, features = [
  "ring",
  "std",
  "tls12",
] }
rustls-pemfile = "2"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(bench)'] }
