[package]
name = "rustls-mbedtls-provider-utils"
version = "0.2.0"
authors = ["Fortanix Inc."]
categories = ["cryptography", "network-programming"]
description = "Utility code used in mbedtls based provider for rustls."
edition = "2021"
homepage = "https://github.com/fortanix/rustls-mbedtls-provider"
license = "MPL-2.0"
readme = "../README.md"
repository = "https://github.com/fortanix/rustls-mbedtls-provider"
resolver = "2"

[dependencies]
mbedtls = { version = "0.12.3", git = "https://github.com/fortanix/rust-mbedtls.git", branch = "mridul/yasna-0.5-crate-update", default-features = false, features = ["std"] }
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
